[tool.poetry]
name = "sibyl"
version = "0.1.0"
description = ""
authors = ["collin <collinlindendrake@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
torch = "^2.2.1"
matplotlib = "^3.8.3"
ta-lib = "^0.4.28"
tqdm = "^4.66.2"
alpaca-py = "^0.17.0"
black = "^24.2.0"
python-dotenv = "^1.0.1"
einx = "^0.1.3"
beartype = "^0.17.2"
setuptools = "^69.1.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
