[tool.poetry]
name = "sibyl"
version = "0.1.0"
description = ""
authors = ["collin <collinlindendrake@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
torch = "^2.2.1"
matplotlib = "^3.8.3"
ta-lib = "^0.4.28"
tqdm = "^4.66.2"
python-dotenv = "^1.0.1"
einx = "^0.1.3"
beartype = "^0.17.2"
setuptools = "^69.1.1"
seaborn = "^0.13.2"
alpaca-py = "^0.20.1"
scipy = "^1.12.0"
pip = "^24.0"
scikit-learn = "^1.4.1.post1"
pywavelets = "^1.6.0"
great-tables = "^0.4.0"
selenium = "^4.19.0"
plotly = "^5.20.0"
yapf = "^0.40.2"
black = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
